--- a/HoPe/locale/en/LC_MESSAGES/django.po
+++ b/HoPe/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-23 10:03+0000\n"
+"POT-Creation-Date: 2019-11-23 10:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,7 +24,7 @@ msgstr "Home"
 
 #: templates/base.html:28
 msgid "Support us"
-msgstr "Support us"
+msgstr "Support use"
 
 #: templates/base.html:69
 msgid "English"
