--- a/HoPe/Foerder/locale/de/LC_MESSAGES/django.po
+++ b/HoPe/Foerder/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-04-28 13:47+0000\n"
+"POT-Creation-Date: 2020-04-30 06:33+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -203,6 +203,9 @@ msgstr ""
 "bei uns begrüßen!"
 
 #: Foerder/templates/Foerder/support_us.html:65
+msgid "Satzung DE"
+msgstr ""
+
 #: Foerder/templates/Foerder/support_us.html:73
 msgid "Membership application DE"
 msgstr "Mitgliedsantrag"
@@ -221,26 +224,26 @@ msgstr ""
 
 #: Foerder/templates/Foerder/support_us.html:82
 msgid "support_us_content_04"
-msgstr "Wir sind der Meinung, dass die "
-"Menschen in Ghana selber am besten Wissen, was gebraucht wird und was nicht. "
-"Aus diesem Grund senden wir alleine Geld nach Ghana und verzichten auf "
-"Sachspenden die aus Deutschland nach Ghana versendet werden müssten, dadurch "
-"sparen wir nicht nur eine Menge an Transportkosten, die an andere Stelle "
-"besser eingesetzt werden könnten, sondern wir sorgen damit auch dafür, dass "
-"dinge ankommen, die auch gebraucht werden und nicht unbenutzt bleibt. Deine "
-"Spende wird immer dort eingesetzt wo es am meisten benötigt wird. Dies ist "
-"sich jeweils abhängig von bevorstehenden Projekten. Das ist dir jedoch zu "
-"ungenau? Da haben wir auch hier das passende. Du kannst ganz einfach selber "
-"aktiv bestimmen, wofür dein Geld verwendet werden soll. Ob in "
-"Unterrichtsmaterialien, wie Stifte, Hefte oder Stühle, oder doch lieber in "
-"aktuelle oder bereits bestehende Projekte, wie Baumsätzlinge, Cottonbeutel "
-"oder aber auch in die Finanzierung unserer bevorstehenden Expansion nach "
-"Motte? Dir ist diese Wahl, in einem bestimmten vorgegebenen Bereich selbst "
-"überlassen. Das du nicht komplett die freie Wahl hast, liegt daran, dass wir "
-"nicht in Dinge finanzieren wollen, die nicht gebraucht werden. So wird das "
-"Geld optimal und genau da eingesetzt wo auch welches benötigt wird. Denn die "
-"Leute vor Ort wissen einfach am besten, was auch gebraucht wird und was "
-"nicht."
+msgstr ""
+"Wir sind der Meinung, dass die Menschen in Ghana selber am besten Wissen, "
+"was gebraucht wird und was nicht. Aus diesem Grund senden wir alleine Geld "
+"nach Ghana und verzichten auf Sachspenden die aus Deutschland nach Ghana "
+"versendet werden müssten, dadurch sparen wir nicht nur eine Menge an "
+"Transportkosten, die an andere Stelle besser eingesetzt werden könnten, "
+"sondern wir sorgen damit auch dafür, dass dinge ankommen, die auch gebraucht "
+"werden und nicht unbenutzt bleibt. Deine Spende wird immer dort eingesetzt "
+"wo es am meisten benötigt wird. Dies ist sich jeweils abhängig von "
+"bevorstehenden Projekten. Das ist dir jedoch zu ungenau? Da haben wir auch "
+"hier das passende. Du kannst ganz einfach selber aktiv bestimmen, wofür dein "
+"Geld verwendet werden soll. Ob in Unterrichtsmaterialien, wie Stifte, Hefte "
+"oder Stühle, oder doch lieber in aktuelle oder bereits bestehende Projekte, "
+"wie Baumsätzlinge, Cottonbeutel oder aber auch in die Finanzierung unserer "
+"bevorstehenden Expansion nach Motte? Dir ist diese Wahl, in einem bestimmten "
+"vorgegebenen Bereich selbst überlassen. Das du nicht komplett die freie Wahl "
+"hast, liegt daran, dass wir nicht in Dinge finanzieren wollen, die nicht "
+"gebraucht werden. So wird das Geld optimal und genau da eingesetzt wo auch "
+"welches benötigt wird. Denn die Leute vor Ort wissen einfach am besten, was "
+"auch gebraucht wird und was nicht."
 
 #: Foerder/templates/Foerder/support_us.html:87
 msgid "Spendenformular"
