--- a/HoPe/Foerder/locale/en/LC_MESSAGES/django.po
+++ b/HoPe/Foerder/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-04-28 13:47+0000\n"
+"POT-Creation-Date: 2020-04-30 06:33+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -199,6 +199,9 @@ msgstr ""
 "welcome you very warmly!"
 
 #: Foerder/templates/Foerder/support_us.html:65
+msgid "Satzung DE"
+msgstr ""
+
 #: Foerder/templates/Foerder/support_us.html:73
 msgid "Membership application DE"
 msgstr "Membership application DE"
@@ -217,23 +220,24 @@ msgstr ""
 
 #: Foerder/templates/Foerder/support_us.html:82
 msgid "support_us_content_04"
-msgstr "We are of the opinion that the people in Ghana "
-"themselves know best what is needed and what is not. For this reason we only "
-"send money to Ghana and do not send donations in kind which would have to be "
-"sent from Germany to Ghana. This way we not only save alot of transport "
-"costs which could be better used elsewhere, but we also make sure that "
-"things arrive which are needed and not left unused. Your donation will "
-"always be used where it is needed most. This depends on upcoming projects. "
-"But that is too vaguefor you? We have the right solution for you here as "
-"well. You can easily and actively determine for yourself what your money is "
-"to be used for. Whether in teaching materials, such as pens, notebooks or "
-"chairs, or rather in current or already existing projects,such as tree "
-"seedlings, cotton bags or even in the financing of our upcoming expansion to "
-"Motte? This choice is left to you, within a certain predefined range. The "
-"reason why you do not have complete freedom of choice is that we do not want "
-"to finance in thingsthat are not needed. This way the money is used "
-"optimally and exactly where it is needed. Because the local people simply "
-"know best what is needed and what is not."
+msgstr ""
+"We are of the opinion that the people in Ghana themselves know best what is "
+"needed and what is not. For this reason we only send money to Ghana and do "
+"not send donations in kind which would have to be sent from Germany to "
+"Ghana. This way we not only save alot of transport costs which could be "
+"better used elsewhere, but we also make sure that things arrive which are "
+"needed and not left unused. Your donation will always be used where it is "
+"needed most. This depends on upcoming projects. But that is too vaguefor "
+"you? We have the right solution for you here as well. You can easily and "
+"actively determine for yourself what your money is to be used for. Whether "
+"in teaching materials, such as pens, notebooks or chairs, or rather in "
+"current or already existing projects,such as tree seedlings, cotton bags or "
+"even in the financing of our upcoming expansion to Motte? This choice is "
+"left to you, within a certain predefined range. The reason why you do not "
+"have complete freedom of choice is that we do not want to finance in "
+"thingsthat are not needed. This way the money is used optimally and exactly "
+"where it is needed. Because the local people simply know best what is needed "
+"and what is not."
 
 #: Foerder/templates/Foerder/support_us.html:87
 msgid "Spendenformular"
