--- a/HoPe/Foerder/locale/de/LC_MESSAGES/django.po
+++ b/HoPe/Foerder/locale/de/LC_MESSAGES/django.po
@@ -204,7 +204,7 @@ msgstr ""
 
 #: Foerder/templates/Foerder/support_us.html:65
 msgid "Satzung DE"
-msgstr ""
+msgstr "Satzung DE"
 
 #: Foerder/templates/Foerder/support_us.html:73
 msgid "Membership application DE"
