--- a/HoPe/Foerder/locale/de/LC_MESSAGES/django.po
+++ b/HoPe/Foerder/locale/de/LC_MESSAGES/django.po
@@ -169,7 +169,7 @@ msgid "Sie sind Chef oder Angestelltes einer Firma,"
 msgstr ""
 "Sie sind Chef oder Angestelltes einer Firma, Unternehmens, Gemeinschaft oder "
 "auch eines Vereins von klein bis groß? Und Sie sind der Meinung, dass mehr "
-"Engagement von Nöten sei (???). Oder haben Sie Ideen und Pläne für "
+"Engagement von Nöten sei. Oder haben Sie Ideen und Pläne für "
 "zukünftige Events, Projekte oder auch Aktionsprogramme, die Wir gemeinsam "
 "anpacken könnten? Dann melden Sie sich bei uns und wir nehmen gerne Kontakt "
 "auf!"
